; ModuleID = '/home/carl/AnghaBench/lz4/ossfuzz/extr_lz4_helpers.c_FUZZ_randomPreferences.c'
source_filename = "/home/carl/AnghaBench/lz4/ossfuzz/extr_lz4_helpers.c_FUZZ_randomPreferences.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i8*, i64, i32 }

@LZ4F_INIT_PREFERENCES = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@LZ4HC_CLEVEL_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @FUZZ_randomPreferences(%struct.TYPE_4__* noalias sret %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  store i32* %1, i32** %3, align 8
  %4 = bitcast %struct.TYPE_4__* %0 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %4, i8* align 8 bitcast (%struct.TYPE_4__* @LZ4F_INIT_PREFERENCES to i8*), i64 32, i1 false)
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @FUZZ_randomFrameInfo(i32* %5)
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 3
  store i32 %6, i32* %7, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @LZ4HC_CLEVEL_MAX, align 4
  %10 = add nsw i32 %9, 3
  %11 = call i8* @FUZZ_rand32(i32* %8, i32 0, i32 %10)
  %12 = getelementptr i8, i8* %11, i64 -3
  %13 = ptrtoint i8* %12 to i64
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 2
  store i64 %13, i64* %14, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i8* @FUZZ_rand32(i32* %15, i32 0, i32 1)
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 1
  store i8* %16, i8** %17, align 8
  %18 = load i32*, i32** %3, align 8
  %19 = call i8* @FUZZ_rand32(i32* %18, i32 0, i32 1)
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %0, i32 0, i32 0
  store i8* %19, i8** %20, align 8
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @FUZZ_randomFrameInfo(i32*) #2

declare dso_local i8* @FUZZ_rand32(i32*, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
